--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
   </div>
 
   <!-- Supabase SDK -->
- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
- <script src="supabase-config.js" defer></script>
- <script src="script.js" defer></script>
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+ <script src="supabase-config.js"></script>
+ <script src="script.js"></script>
 
 
 </body>
