Change Price header to labeled input for clarity

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <th>Name</th>
             <th>Stock</th>
             <th>Unit</th>
-            <th>Price</th>
+            <label for="productPrice">Price (in Rs.)</label>
             <th>Action</th>
           </tr>
         </thead>
