--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <th>Name</th>
             <th>Stock</th>
             <th>Unit</th>
-            <label for="productPrice">Price (in Rs.)</label>
+            <label >Price</label>
             <th>Action</th>
           </tr>
         </thead>
