Update form and table headers in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="login-box">
       <h1>🛍️ Shop Stock Manager</h1>
       <p class="subtitle">Cloud-Based Inventory Management</p>
-      <form id="loginForm">
+      <form id="loginForm">+++
         <div class="form-group">
           <label for="email">Email</label>
           <input type="email" id="email" placeholder="admin@shop.com" required />
@@ -110,10 +110,10 @@
       <table class="table">
         <thead>
           <tr>
-            <th>Name</th>
+            <th>Product Name</th>
             <th>Stock</th>
             <th>Unit</th>
-            <label >Price</label>
+            <label>Price</label>
             <th>Action</th>
           </tr>
         </thead>
