--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <th>Product Name</th>
             <th>Stock</th>
             <th>Unit</th>
-            <label>Price</label>
+            <th>Price</th>
             <th>Action</th>
           </tr>
         </thead>
