--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     <form id="singleItemForm">
       <div class="form-row">
         <div class="form-group">
-          <label for="saleProduct">Product</label>
+          <label for="saleProductSearch">Search Product</label>
+          <input type="text" id="saleProductSearch" placeholder="Type product name..." />
           <select id="saleProduct" required>
             <option value="">Select product</option>
           </select>
@@ -172,6 +173,7 @@
     </form>
   </div>
 </div>
+
 
 
     <!-- Add Stock Section -->
